@@ -48,6 +48,7 @@ sub _generate_command {
   $cmd = $cmd . q{ --verbose --runfolder_path } . $self->_runfolder_path($id_run);
   my $path = join q[:], $self->local_path(), $ENV{PATH};
   $cmd = qq{export PATH=$path;} . $cmd;
+  $cmd = $self->gclp_conf()->{command_prefix} . q{ } . $cmd;
   return $cmd;
 }
 
